--- a/superheroarchive/superheroes/templates/superheroes/index.html
+++ b/superheroarchive/superheroes/templates/superheroes/index.html
@@ -12,7 +12,7 @@
 <ul>
     {% for superhero in all_superheroes %}
     <li><h2>{{superhero.name}} </h2>
-    <a href="{% url 'superheroes:detail' superhero.id %}">See more info</a></li>
+    <a href="{% url 'superheroes:superhero_detail' superhero.id %}">See more info</a></li>
     {% endfor %}
 </ul>
 
